Fix `ins` and `del` colors for better contrast

--- a/_src/_includes/css/style.css
+++ b/_src/_includes/css/style.css
@@ -535,13 +535,13 @@ mark {
 }
 
 del {
-    background-color: #c4604f;
-    text-decoration: line-through;
+  background-color: var(--error);
+  text-decoration: line-through;
 }
 
 ins {
-    background-color: #e27851;
-    text-decoration: none;
+  background-color: var(--success);
+  text-decoration: none;
 }
 
 blockquote,
